// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1
        className="App-title"
      >
        Welcome to React
      </h1>
    </header>
    <Title
      text="Some title"
    >
      <div>
        Some title
      </div>
    </Title>
    <p
      className="App-intro"
    >
      To get started, edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <ul>
      <li />
      <li />
      <li />
    </ul>
    <Test>
      <div>
        Testing
      </div>
    </Test>
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
  </header>
  <Title
    text="Some title"
  />
  <p
    className="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
  <ul>
    <li />
    <li />
    <li />
  </ul>
  <Test />
</div>
`;
